alignment issue

--- a/src/app/pages/contact/contact.css
+++ b/src/app/pages/contact/contact.css
@@ -45,7 +45,7 @@
     grid-template-columns:1fr 1fr;
     align-items: start;
     justify-content: start;
-    width: 100%;
+    /* width: 100%; */
     /* margin:0 auto;
     height: auto; */
    
